Se creo la tabla de calificaciones

--- a/index.html
+++ b/index.html
@@ -7,10 +7,17 @@
 </head>
 <body>
     <table border="1">
-        <th></th>
-        <td>No</td>
-        <td>Nombre Completo</td>
-        <td>Calificación</td>
+        <thead>        <th>
+            <td>No</td>
+            <center><td>Nombre Completo</td></center>
+            <td>Calificación</td>
+        </th></thead>
+<tbody><th>
+    <td>1</td>
+    <td>Erick Anselmo Gamboa Rodriguez</td>
+    <td>10</td>
+</th></tbody>
+    
     </table>
 </body>
 </html>
