se quito el nombre completo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </th></thead>
 <tbody><th>
     <td>1</td>
-    <td>Erick Anselmo Gamboa Rodriguez</td>
+    <td>Erick Gamboa</td>
     <td>10</td>
 </th></tbody>
     
